--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -37,6 +37,10 @@
 
       table
         width: 100%
+        border-spacing: 0
+
+        th, td
+          padding: 1em
 
     .thumbnail
       border-radius: 0
