--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -34,6 +34,7 @@
       p
         margin-block-start: .5em
         margin-block-end: .5em
+        line-height: 2em
 
       table
         width: 100%
