--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -63,6 +63,21 @@
     .thumbnail
       border-radius: 0
 
+    .footnote
+      font-size: .8em
+      font-weight: bold
+      color: #2196f3
+      vertical-align: super
+      margin-inline-end: .5em
+      text-decoration: none!important
+
+    .footnote-desc
+      opacity: .8
+      margin-left: 1em
+
+      .number
+        margin-right: .3em
+
     code
       line-height: 2em
 
