plaintext style change

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -94,9 +94,12 @@
       .language-plaintext
         font-weight: bold
         margin: 0 .2em
-        color: #d14
-        font-size: .85em
+        color: #5d696d
+        font-size: .9em
         font-family: var(--font-family--default)
+        background: #efefef
+        padding: .2em .5em
+        border-radius: 5px
 
       &:before
         position: absolute
