--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -137,7 +137,7 @@
         .c1, .cm
           color: #8fbf74
 
-        .kd, .k, .kt
+        .kd, .k, .kt, .kn
           color: #ff8d38
 
         .nf
