--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -134,6 +134,10 @@
           content: 'JAVA'
           background: #3b7bbe
 
+        .no
+          color: #9b80ce
+          font-style: italic
+
         .c1, .cm
           color: #8fbf74
 
