--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -61,6 +61,9 @@ body
   .pl-2
     padding-left: 2em!important
 
+  .pr-2
+    padding-right: 2em!important
+
   .pb-2
     padding-bottom: 2em!important
 
