--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -36,6 +36,9 @@
         margin-block-end: .5em
         line-height: 2em
 
+      li
+        padding-block-end: .25em
+
       table
         width: 100%
         border-spacing: 0
