--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -31,13 +31,9 @@
       a
         text-decoration: underline
 
-      p
-        margin-block-start: .5em
-        margin-block-end: .5em
-        line-height: 2em
+      p, li
+        line-height: 1.8em
 
-      li
-        padding-block-end: .25em
 
       table
         width: 100%
