--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -105,7 +105,7 @@
         top: 0
         right: 0
         font-weight: bold
-        padding: .18em 1em
+        padding: 0 1em
         font-size: .68em
 
       .language-yaml
