--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -86,9 +86,11 @@
         border: 1px solid #eee
         padding: .8em 0
         color: #dadcf3
-        overflow: auto
         border-top: 0
         position: relative
+
+        .highlight
+          overflow: auto
 
       .language-plaintext
         font-weight: bold
