--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -103,6 +103,7 @@
         border-radius: 5px
 
       &:before
+        line-height: 2em
         position: absolute
         top: 0
         right: 0
