--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -230,6 +230,8 @@
         color: #f7c93f
 
     .info
+      display: flex
+      align-items: center
       font-size: .78em
       color: var(--font-color--post-info)
 
