--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -163,5 +163,5 @@ body
       display: block
 
     .contents-wrapper
-      padding: var(--padding--contents-wrapper-y) calc(var(--padding--contents-wrapper-x) / 2)
+      padding: var(--padding--contents-wrapper-y) calc(var(--padding--contents-wrapper-x) / 2) !important
       margin-top: 3em
