add translate style

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -291,6 +291,20 @@
         &:before
           content: '\f005'
 
+    .translation-article-wrapper
+      h1
+        line-height: 1.5em
+        font-size: 1em
+        font-weight: normal
+        margin-block-start: 2.5em
+
+      h2
+        line-height: 1.5em
+        font-size: .9em
+        margin-block-start: 0
+        font-weight: normal
+        opacity: .6
+
 
 
 @media screen and (max-width: 768px)
