--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -46,6 +46,9 @@ body
   .mb-4
     margin-bottom: 4em!important
 
+  .mb-5
+    margin-bottom: 4em!important
+
   .mr-1
     margin-right: 1em!important
 
