--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -37,6 +37,9 @@ body
   .mt-5
     margin-top: 5em!important
 
+  .mt-6
+    margin-top: 6em!important
+
   .mb-1
     margin-bottom: 1em!important
 
