category color change

--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -14,6 +14,12 @@
     &.brown
       background: var(--color-brown)
 
+    &.green
+      background: var(--color-green)
+
+    &.black
+      background: var(--font-color--default)
+
   .category
     color: var(--key-color--default)
     font-size: .75em
@@ -21,6 +27,12 @@
 
     &.brown
       color: var(--color-brown)
+
+    &.green
+      color: var(--color-green)
+
+    &.black
+      color: var(--font-color--default)
 
   .tag-container
     .tag
