change post detail link style

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -190,6 +190,9 @@
         &:before
           content: ''
 
+    a.btn-debugger
+      color: var(--font-color--default)
+
     .stepper
       .title
         &:before
