--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -97,6 +97,11 @@ body
     border: 1px solid var(--border-color--thumbnail)
     object-fit: contain
 
+  .thumbnail-description
+    font-size: .8em
+    color: #968d8a
+    font-weight: bold
+
   .icon
     font-style: normal
 
