apply translation wrapper children a tag style

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -313,6 +313,11 @@
         font-weight: normal
         opacity: .6
 
+      a
+        .language-plaintext
+          color: inherit
+
+
     .accordion-wrapper
       .contents
         display: none
