--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -52,6 +52,9 @@ body
   .mb-5
     margin-bottom: 4em!important
 
+  .mr-half
+    margin-right: .5em!important
+
   .mr-1
     margin-right: 1em!important
 
@@ -69,6 +72,9 @@ body
 
   .pr-2
     padding-right: 2em!important
+
+  .pb-1
+    padding-bottom: 1em!important
 
   .pb-2
     padding-bottom: 2em!important
