--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -317,6 +317,18 @@
         .language-plaintext
           color: inherit
 
+      .info-wrapper
+        display: flex
+        padding: 0 2em
+
+        .icon
+          font-size: 2em
+
+        &.spring
+          background: #ecf1e8
+
+          .icon
+            color: #3f6a22
 
     .accordion-wrapper
       .contents
