--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -112,6 +112,20 @@
         padding: .2em .5em
         border-radius: 5px
 
+      .language-xml
+        .cp, .nt
+          color: #ffbf00
+
+        .c
+          color: #8e8e8e
+
+        .s
+          color: #709a59
+
+        &:before
+          content: 'XML'
+          background: #6d6d6d
+
       .language-yaml
         .na, .pi
           color: #ff5722
