add kotlin style

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -146,11 +146,17 @@
         .s
           color: #cddc39
 
+      .language-kotlin
+        &:before
+          content: 'KOTLIN'
+          background: #7854b9
+
       .language-java
         &:before
           content: 'JAVA'
           background: #3b7bbe
 
+      .language-java, .language-kotlin
         .no
           color: #9b80ce
           font-style: italic
