--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -102,6 +102,17 @@
           padding: 0 1em
           font-size: .68em
 
+      .language-groovy
+        &:before
+          content: 'GROOVY'
+          background: #5f97b6
+
+        .s2
+          color: #709a59
+
+        .nl
+          color: #9b80ce
+
       .language-plaintext
         font-weight: bold
         margin: 0 .2em
