--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -64,6 +64,12 @@ body
   .ml-3
     margin-left: 3em!important
 
+  .pt-3
+    padding-top: 3em!important
+
+  .pt-5
+    padding-top: 5em!important
+
   .pl-1
     padding-left: 1em!important
 
