--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -109,7 +109,7 @@ body
     border: 1px solid var(--border-color--thumbnail)
     object-fit: contain
 
-  .thumbnail-description
+  .details-description
     font-size: .8em
     color: #968d8a
     font-weight: bold
