add spring guide wrapper class

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -361,6 +361,9 @@
           .icon
             color: #3f6a22
 
+      .guide-wrapper
+        background: #dce6e6
+
     .accordion-wrapper
       .contents
         display: none
