--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -362,7 +362,11 @@
             color: #3f6a22
 
       .guide-wrapper
+        padding: .5em 2em
         background: #dce6e6
+
+        .title
+          font-weight: bold
 
     .accordion-wrapper
       .contents
