--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -64,6 +64,9 @@ body
   .ml-3
     margin-left: 3em!important
 
+  .pt-2
+    padding-top: 2em!important
+
   .pt-3
     padding-top: 3em!important
 
