--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -350,7 +350,7 @@
 
       .info-wrapper
         display: flex
-        padding: 0 2em
+        padding: .5em 2em 2em 2em
 
         .icon
           font-size: 2em
@@ -362,7 +362,7 @@
             color: #3f6a22
 
       .guide-wrapper
-        padding: .5em 2em
+        padding: .5em 2em 2em 2em
         background: #dce6e6
 
         .title
