--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -376,6 +376,11 @@
       .handler.active + .contents
         display: block
 
+      .inner-contents
+        border-top: 1px dashed #e8e8e8
+        margin-top: 3em
+        padding-top: 1em
+
       .handler
         position: relative
         padding-left: 2em
