--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -348,6 +348,10 @@
         .language-plaintext
           color: inherit
 
+      .info-wrapper, .guide-wrapper
+        .language-plaintext
+          background: #dedede
+
       .info-wrapper
         display: flex
         padding: .5em 2em 2em 2em
