--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -349,6 +349,8 @@
           color: inherit
 
       .info-wrapper, .guide-wrapper
+        font-size: .95em
+
         .language-plaintext
           background: #dedede
 
