--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -83,7 +83,9 @@
 <script src="//code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script type="text/javascript">
     (function($) {
-        bindEvent()
+        $(function() {
+            bindEvent()
+        })
 
         function bindEvent() {
             const $btnToggleMenu = $('#btnToggleMenu')
