--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        {{ site.title }}
-        {% if page.title %}&middot; {{ page.title }}{% endif %}
+        {{ site.title }} {% if page.title %}&middot; {{ page.title }}{% endif %}
     </title>
 
     {% seo %}
