--- a/_includes/category-link.html
+++ b/_includes/category-link.html
@@ -1,6 +1,6 @@
 {% assign category = include.categories | first %}
 
-<a href="{{ category | downcase | relative_url }}" class="{{include.class}} {{ site.category[category].color-class }}">
+<a href="{{ category | downcase | relative_url }}" class="{{include.class}} {{ site.category[category].color_class }}">
     {{ category | upcase }}
 </a>
 
