--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,45 +1,19 @@
+
+
 <div class="navigation-bar default">
     <a href="/search" class="icon search"></a>
 
     <section class="mt-3 body">
         <h1 class="title">
-            <a href="/">
-                {{ site.title }}
-            </a>
+            <a href="/">{{ site.title }}</a>
         </h1>
 
-        <ul class="category-container mt-3">
-            {% assign currentCategoryName = page.url | replace: '.html', '' | replace: '/', '' %}
-
-            {% capture categories %}
-            {% for category in site.category %}
-                {% assign additionalInfo = category | last %}
-                {{ additionalInfo.priority }}|{{ category | first }}
-                {% endfor %}
-            {% endcapture %}
-
-            {% assign sorted_categories = categories | split: ' ' | sort_reverse %}
-            {% for category in sorted_categories %}
-            <li>
-                {% assign arr = category | split: '|' %}
-
-                {% assign categoryName = arr | last | downcase %}
-                {% if currentCategoryName contains categoryName %}
-                    <a href="/{{ categoryName }}" class="{{ categoryName }} active">
-                        {{ categoryName | upcase }}
-                    </a>
-                {% else %}
-                    <a href="/{{ categoryName }}" class="{{ categoryName }}">
-                        {{ categoryName | upcase }}
-                    </a>
-                {% endif %}
-            </li>
-            {% endfor %}
-        </ul>
+        {% include category-list.html class="mt-3" %}
     </section>
+
     <section class="footer">
         <div class="profile-container">
-            {% for profile in site.profile %}
+            {% for profile in site.social_profile %}
                 <a href="{{ profile | last }}" target="_blank" >
                     <i class="icon {{ profile | first }}"></i>
                 </a>
@@ -56,28 +30,12 @@
                 {{ site.title }}
             </a>
         </h5>
-        <button id="btnToggleMenu" type="button" class="btn-menu">
+        <button id="btnToggleBar" type="button" class="btn-menu">
             <i class="fa fa-bars"></i>
         </button>
     </div>
 
-    <ul id="categoryContainer" class="category-container">
-        {% assign currentCategoryName = page.url | replace: '.html', '' | replace: '/', '' %}
-        {% for category in site.categories %}
-        <li>
-            {% assign categoryName = category | first | downcase %}
-            {% if currentCategoryName contains categoryName %}
-            <a href="/{{ categoryName }}" class="{{ categoryName }} active">
-                {{ category | first | upcase }}
-            </a>
-            {% else %}
-            <a href="/{{ categoryName }}" class="{{ categoryName }}">
-                {{ category | first | upcase }}
-            </a>
-            {% endif %}
-        </li>
-        {% endfor %}
-    </ul>
+    {% include category-list.html id="mobileCategoryContainer" %}
 </div>
 
 <script src="//code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -88,9 +46,9 @@
         })
 
         function bindEvent() {
-            const $btnToggleMenu = $('#btnToggleMenu')
-            $btnToggleMenu.on('click', function() {
-                const $categoryContainer = $('#categoryContainer')
+            const $btnToggleBar = $('#btnToggleBar')
+            $btnToggleBar.on('click', function() {
+                const $categoryContainer = $('#mobileCategoryContainer')
 
                 $categoryContainer.slideToggle()
             })
