--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include head.html %}
-    <body class="{{ site.custom-theme }} {{ page.layout }} container">
+    <body class="{{ site.theme_color }} theme {{ page.layout }} container">
         {% include navigation-bar.html %}
 
         <div class="contents-wrapper">
