--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -13,9 +13,9 @@
 
     <section class="footer">
         <div class="profile-container">
-            {% for profile in site.social_profile %}
-                <a href="{{ profile | last }}" target="_blank" >
-                    <i class="icon {{ profile | first }}"></i>
+            {% for account in site.account %}
+                <a href="{{ account | last }}" target="_blank" >
+                    <i class="account {{ profile | first }}"></i>
                 </a>
             {% endfor %}
         </div>
