--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% include head.html %}
 
-    <body class="{{ site.custom-theme }} {{ page.layout }} container">
+    <body class="{{ site.theme_color }} theme {{ page.layout }} container">
         {% include navigation-bar.html %}
 
         <div class="contents-wrapper">
