--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,12 +1,13 @@
 
 
 <div class="navigation-bar default">
-    <a href="/search" class="icon search"></a>
+    <a href="/search" class="btn-search"></a>
 
     <section class="mt-3 body">
-        <h1 class="title">
-            <a href="/">{{ site.title }}</a>
+        <h1>
+            <a href="/" class="title">{{ site.title }}</a>
         </h1>
+
 
         {% include category-list.html class="mt-3" %}
     </section>
@@ -24,13 +25,13 @@
 
 <div class="navigation-bar mobile">
     <div class="header">
-        <a href="/search" class="icon search"></a>
+        <a href="/search" class="btn-search"></a>
         <h5 class="title">
             <a href="/">
                 {{ site.title }}
             </a>
         </h5>
-        <button id="btnToggleBar" type="button" class="btn-menu">
+        <button id="btnToggleBar" type="button" class="btn-toggle-bar">
             <i class="fa fa-bars"></i>
         </button>
     </div>
