--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -1,122 +1,101 @@
 .navigation-bar
-  background: var(--background-color--nav)
-  font-weight: bold
-  text-align: center
-  padding: 0
-  position: relative
+    &.mobile
+        display: none
 
-  .search
-    position: absolute
-    top: 0
-    right: 0
-    color: var(--font-color--nav-link)
-    font-size: 1.4em
-    cursor: pointer
-    padding: .5em 1em
-
-  section
-    padding: 0 2em
-    margin: 0
-
-    &.body
-      height: 86vh
-
-    &.footer
-      display: flex
-      justify-content: center
-      align-items: center
-      font-weight: normal
-
-  .title
-    a
-      color: var(--font-color--nav-title)
-      font-size: 2em
-      padding: 0
-      margin: 0
-
-  .category-container
-    list-style: none
-    margin: 0
+    background: var(--background-color--nav)
+    font-weight: bold
+    text-align: center
     padding: 0
+    position: relative
+    line-height: 1.6
 
-    li
-      padding: 1em 2em
+    section
+        padding: 0 2em
+        margin: 0
 
-    a
-      font-size: 1.6em
-      color: var(--font-color--nav-category)
-      opacity: 0.8
-      display: flex
-      justify-content: center
-      align-items: center
+        &.body
+            height: 86vh
 
-      &:hover
-        opacity: 0.9
-      &.active
-        opacity: 0.98
-      &:before
-        content: '■'
-        font-size: .4em
-        margin-right: 1em
+        &.footer
+            display: flex
+            justify-content: center
+            align-items: center
+            font-weight: normal
 
+    .title
+        color: var(--font-color--nav-title)
+        font-size: 2em
 
-  .profile-container
-    padding: 0
-    display: flex
-    justify-content: center
-    align-items: center
-
-    a
-      margin: 0 .5em
-      .icon
+    .btn-search
+        position: absolute
+        top: 0
+        right: 0
         color: var(--font-color--nav-link)
+        font-size: 1.4em
+        padding: .5em 1em
 
-  &.mobile
-    display: none
+    .category-container
+        list-style: none
+        margin: 0
+        padding: 0
+
+        li
+            padding: 1em 2em
+        a
+            font-size: 1.6em
+            color: var(--font-color--nav-category)
+            opacity: 0.8
+            display: flex
+            justify-content: center
+            align-items: center
+
+            &:hover
+                opacity: 0.9
+            &.active
+                opacity: 0.98
+            &:before
+                content: '■'
+                font-size: .4em
+                margin-right: 1em
 
 
 @media screen and (max-width: 768px)
-  .navigation-bar
-    &.default
-      display: none
+    .navigation-bar
+        &.default
+            display: none
 
-    &.mobile
-      display: block
-      position: fixed
-      top: 0
-      width: 100%
-      z-index: 1
+        &.mobile
+            display: block
+            position: fixed
+            top: 0
+            width: 100%
+            z-index: 1
 
-      .header
-        display: flex
-        justify-content: space-between
-        align-items: center
-        padding: .5em 0
+            .header
+                display: flex
+                justify-content: space-between
+                align-items: center
+                padding: .5em 0
 
-        .title
-          margin: 0
+            .category-container
+                background: var(--background-color--default)
+                box-shadow: 0 5px 5px #00000008
+                display: none
 
-        .btn-menu
-          margin-right: .5em
-          background: transparent
-          border: none
-          font-size: 1.4em
-          color: var(--font-color--nav-title)
-          opacity: .9
+                a
+                    font-size: 1em
+                    color: var(--font-color--default)
+                    justify-content: left
 
+            .btn-search
+                position: initial
+                padding: 0
+                margin-left: .8em
 
-      .category-container
-        background: var(--background-color--default)
-        box-shadow: 0 5px 5px #00000008
-        display: none
-
-        a
-          font-size: 1em
-          color: var(--font-color--default)
-          justify-content: left
-
-      .search
-        position: initial
-        padding: 0
-        margin-left: .8em
-        color: var(--font-color--nav-title)
+            .btn-toggle-bar
+                margin-right: .5em
+                background: transparent
+                border: none
+                font-size: 1.4em
+                color: var(--font-color--nav-title)
+                opacity: .8
