--- a/static/css/partial/layout/_base.sass
+++ b/static/css/partial/layout/_base.sass
@@ -1,7 +1,14 @@
 .container
   section
+    .section-title
+      color: var(--font-color--section-title)
+
     .section-contents
       margin-top: 2em
       background: var(--background-color--post-container)
       border: 1px solid var(--border-color--post-container)
       padding: 2em 1.5em
+
+    .post-count
+      color: var(--font-color--post-count)
+      font-size: .75em
