--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -18,8 +18,9 @@
                         <li>
                             <div>
                                 <div class="additional-info-wrapper">
-                                    <p class="date ma-0 mb-1">{{ post.date | date: "%Y.%m.%d " }}</p>
+                                    <p class="post-date ma-0 mb-1">{{ post.date | date: "%Y.%m.%d " }}</p>
                                 </div>
+
                                 <a href="{{ post.url }}" class="title">
                                     {{ post.title }}
                                 </a>
