--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -11,18 +11,21 @@
                 <ul class="post-container thumbnail">
                     {% for post in site.posts limit: 6 %}
                         <li>
-                            <a href="{{ post.url }}" class="thumbnail-wrapper">
-                                <img src="{{ post.thumbnail | relative_url }}" class="thumbnail" onerror="this.src='{{ '/static/images/default--unknown-thumbnail.png' | relative_url }}';this.style='object-fit:cover'" >
+                            <a href="{{ post.url }}" class="thumbnail-wrapper mb-1">
+                                <img src="{{ post.thumbnail | relative_url }}"
+                                    class="thumbnail"
+                                    onerror="this.src='{{ '/static/images/default--unknown-thumbnail.png' | relative_url }}';this.style='object-fit:cover'"
+                                >
                             </a>
-                            <div class="additional-info-wrapper">
-                                {% include category-link.html categories=post.categories class="category" %}
+
+                            <div class="additional-info-wrapper mb-1 clear-fix">
+                                {% include category-link.html categories=post.categories class="category-text" %}
 
                                 <i class="divider"></i>
-                                <p class="date">{{ post.date | date: "%Y.%m.%d " }}</p>
+                                <p class="post-date">{{ post.date | date: "%Y.%m.%d " }}</p>
                             </div>
-                            <a href="{{ post.url }}" class="title">
-                                {{ post.title }}
-                            </a>
+
+                            <a href="{{ post.url }}">{{ post.title }}</a>
                         </li>
                     {% endfor %}
                 </ul>
