--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,7 +8,7 @@
         <div class="contents-wrapper">
             <section>
                 <h2 class="section-title">Latest Posts</h2>
-                <ul class="post-container thumbnail">
+                <ul class="post-container thumbnail section-contents">
                     {% for post in site.posts limit: 6 %}
                         <li>
                             <a href="{{ post.url }}" class="thumbnail-wrapper mb-1">
