--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -46,6 +46,9 @@ body
   .mt-6
     margin-top: 6em!important
 
+  .mb-half
+    margin-bottom: .5em!important
+
   .mb-1
     margin-bottom: 1em!important
 
