--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include head.html %}
+
     <body class="{{ site.theme_color }} theme {{ page.layout }} container">
         {% include navigation-bar.html %}
 
@@ -13,7 +14,7 @@
                     <span class="post-count">{{ categorizedPosts.size }}</span>
                 </h2>
 
-                <ul class="post-container text">
+                <ul class="post-container text mt-2">
                     {% for post in categorizedPosts %}
                         <li>
                             <div>
@@ -21,9 +22,7 @@
                                     <p class="post-date ma-0 mb-1">{{ post.date | date: "%Y.%m.%d " }}</p>
                                 </div>
 
-                                <a href="{{ post.url }}" class="title">
-                                    {{ post.title }}
-                                </a>
+                                <a href="{{ post.url }}">{{ post.title }}</a>
                             </div>
 
                             {% include tag-container.html tags=post.tags class="mt-3" %}
@@ -33,7 +32,7 @@
                     {% assign emptySpaceCount = categorizedPosts.size | modulo: 4 | minus: 4 | abs %}
                     {% if emptySpaceCount < 4 %}
                         {% for emptySpaceCount in (1..emptySpaceCount) %}
-                            <li class="default-item"></li>
+                            <li class="empty-post"></li>
                         {% endfor %}
                     {% endif %}
                 </ul>
